# baryonyx

./: ARCHITECTURE.md  Cargo.toml  Makefile  README.md
bootstrap/: Cargo.toml  README.md
bootstrap/src/: bproperty.rs  bstruct.rs  btype.rs  main.rs
crates/ip-address/: Cargo.toml
crates/ip-address/src/: lib.rs
examples/: hello_world.rs
src/: lib.rs
vm/: Cargo.toml
