[package]
name = "baryonyx"
version = "0.1.0"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/baryonyx/latest/baryonyx/"
description = "A web framework inspired by Phoenix."
repository = "https://github.com/ericrobolson/baryonyx"
keywords = ["web", "framework", "phoenix", "rust"]
categories = ["web-programming"]
exclude = ["target/", "Makefile", ".github/"]

[lib]
name = "baryonyx"
path = "src/lib.rs"

[[bin]]
name = "baryonyx"
path = "src/bin.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
warp = { version = "0.3.7", features = ["tls", "compression"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.115"
ip-address = { path = "crates/ip-address" }
rcgen = "0.13.2"
regex = "1.11.1"


[build-dependencies]
static_bundler = "0.1.0"
